# ChemBench

./: .bumpversion.cfg  .gitignore  01_statistics.ipynb  MANIFEST.in  README.md  setup.cfg  setup.py  summary.pkl  tox.ini
chembench/: 00_prepare_dataset.ipynb  01_statistics.ipynb  02_usage.ipynb  __init__.py  dataset.py  summary.pkl
chembench/cluster/: __init__.py
chembench/cluster/cluster_split/: 01_split_data_esol.ipynb  06_split_data_BACE.ipynb  cluster_split_ClinTox.csv
chembench/data_and_index/: readme.md
chembench/data_and_index/BACE/: BACE.scaffold122.ind.pkl
chembench/data_and_index/BBBP/: BBBP.scaffold123.ind.pkl
chembench/data_and_index/ChEMBL/: ChEMBL.scaffold0.ind.pkl  ChEMBL.scaffold1.ind.pkl  ChEMBL.scaffold10.ind.pkl  ChEMBL.scaffold2.ind.pkl  split.sh
chembench/data_and_index/ClinTox/: ClinTox.random122.ind.pkl  (+1 more)
chembench/notebook/: 00_prepare_dataset.ipynb  01_statistics.ipynb  02_usage.ipynb  03_other_data.ipynb
chembench/robustness/: __init__.py
data_and_index/BBBP/: BBBP.scaffold123.ind.pkl
data_and_index/ChEMBL/: ChEMBL.scaffold11.ind.pkl  ChEMBL.scaffold12.ind.pkl
data_and_index/ClinTox/: ClinTox.random124.ind.pkl
data_and_index/ESOL/: ESOL.random123.ind.pkl
data_and_index/FreeSolv/: FreeSolv.random124.ind.pkl
data_and_index/Lipop/: Lipop.random124.ind.pkl
data_and_index/PDBbind-full/: PDBbind-full.timesplit.ind.pkl
data_and_index/SIDER/: SIDER.random122.ind.pkl  SIDER.random124.ind.pkl
data_and_index/Tox21/: Tox21.random122.ind.pkl
data_and_index/ToxCast/: ToxCast.random123.ind.pkl
src/chembench/: version.py
(+105 files in other folders)
