##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = chembench
version = 0.0.1-dev
description = ChemBench package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pandas
    tqdm

zip_safe = false
include_package_data = True

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
